# OpenAWE

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: install_vulkan_sdk_win.ps1
.github/workflows/: main.yml
cmake/: CompileTechnique.cmake  FindFMT.cmake  FindGLFW.cmake  FindGLM.cmake  FindGLSLC.cmake  FindLZ4.cmake  FindMojoshader.cmake  FindOGG.cmake  FindOgg.cmake  FindTheora.cmake  FindVorbis.cmake
data/: human.xml  male_player_class.xml
shaders/: ambientconvolution-downsample2x2.comp.glsl  ambientconvolution-mult_basis_func.comp.glsl  ambientconvolution-render_sh_term.comp.glsl  ambientconvolution-sum2x2.comp.glsl  character-depth.frag.glsl  character-depth.vert.glsl  character.vert.glsl  character_ps.glsl  character_vs.glsl  color-material.frag.glsl  color.vert.glsl  color_ps.glsl  color_vs.glsl  deferredlight-pointlight.frag.glsl  deferredlight-render_stencil.frag.glsl  deferredlight-render_stencil.vert.glsl  foliagebillboard-depth.frag.glsl  foliagebillboard-depth.vert.glsl  foliagebillboard-material.frag.glsl  foliagebillboard-material.vert.glsl  foliagebillboard.frag.glsl  foliagebillboard.vert.glsl  foliageprt-depth.frag.glsl  foliageprt-depth.vert.glsl  foliageprt-material.frag.glsl  foliageprt-material.vert.glsl  foliageprt.frag.glsl  foliageprt_ps.glsl  foliageprt_vs.glsl  gui-material.frag.glsl  gui_vs.glsl  light-depth.frag.glsl  light-depth.vert.glsl  light-material.frag.glsl  light-material.vert.glsl  sky-generate_sky.frag.glsl  sky-generate_sky.vert.glsl  sky-night_sky.frag.glsl  sky-night_sky.vert.glsl  standardmaterial-depth.frag.glsl  (+17 more)
src/: aiprocess.cpp  aiprocess.h  awe.cpp  character.h  configuration.h  controlledfreecamera.cpp  controlledfreecamera.h  controlledorbitalcamera.cpp  controlledorbitalcamera.h  engine.cpp  engine.h  episode.cpp  episode.h  game.cpp  game.h  global.cpp  global.h  keyframer.cpp  keyframer.h  keyframerprocess.cpp  keyframerprocess.h  level.cpp  level.h  localeconfig.cpp  localeconfig.h  mousecontrolledfreecamera.cpp  mousecontrolledfreecamera.h  objectcollection.cpp  objectcollection.h  playercontroller.cpp  playercontroller.h  probe.cpp  probe.h  task.cpp  task.h  timer.cpp  timer.h  timerprocess.cpp  timerprocess.h  transform.cpp  (+5 more)
src/awe/: archive.cpp  archive.h  atmfile.cpp  atmfile.h  binarchive.cpp  binarchive.h  binfolfile.cpp  binfolfile.h  binmshfile.cpp  binmshfile.h  cidfile.cpp  cidfile.h  collisionsfile.cpp  collisionsfile.h  determinetype.cpp  determinetype.h  dpfile.cpp  dpfile.h  foliagedatafile.cpp  foliagedatafile.h  gidregistryfile.cpp  gidregistryfile.h  havokfile.cpp  havokfile.h  hg.h  object.h  objectbinaryreadstream.cpp  objectbinaryreadstream.h  objectbinaryreadstreamv1.cpp  objectbinaryreadstreamv1.h  objectbinaryreadstreamv2.cpp  objectbinaryreadstreamv2.h  objectstream.cpp  objectstream.h  objectxmlwritestream.cpp  objectxmlwritestream.h  objfile.cpp  objfile.h  packmetafile.cpp  packmetafile.h  (+21 more)
src/codecs/: adpcm.cpp  adpcm.h  audiostream.cpp  audiostream.h  container.cpp  container.h  dumpwav.cpp  dumpwav.h  fsbfile.cpp  fsbfile.h  oggcontainer.cpp  oggcontainer.h  pcm.h  theora.cpp  theora.h  videostream.cpp  videostream.h  vorbis.cpp  vorbis.h  yuv2rgb.cpp  yuv2rgb.h
src/common/: bit_cast.h  bitstream.h  containers.h  convexshape.cpp  convexshape.h  cpuinfo.cpp  cpuinfo.h  crc32.h  dxbc.cpp  dxbc.h  endianness.h  endianreadstream.cpp  endianreadstream.h  exception.cpp  exception.h  frustrum.cpp  frustrum.h  gaussblur.h  inifile.cpp  inifile.h  lz4.cpp  lz4.h  memreadstream.cpp  memreadstream.h  memwritestream.cpp  memwritestream.h  nurbs.h  path.cpp  path.h  platform.cpp  platform.h  readfile.cpp  readfile.h  readstream.cpp  readstream.h  sh.h  shape.cpp  shape.h  singleton.h  strutil.cpp  (+16 more)
src/events/: event.h  eventman.cpp  eventman.h  gamepad.h  key.h  mouse.h
src/graphics/: ambiancestate.cpp  ambiancestate.h  animation.cpp  animation.h  animationcontroller.cpp  animationcontroller.h  animationtree.cpp  animationtree.h  attributeobject.h  billboardset.cpp  billboardset.h  binfolloader.cpp  binfolloader.h  binmshloader.cpp  binmshloader.h  buffer.h  camera.cpp  camera.h  context.h  font.cpp  font.h  font_binfnt.cpp  font_binfnt.h  fontman.cpp  fontman.h  freecamera.cpp  freecamera.h  fullscreenplane.cpp  fullscreenplane.h  gfxman.cpp  gfxman.h  glcontext.h  guielement.cpp  guielement.h  imguielement.cpp  imguielement.h  imguiwindow.cpp  imguiwindow.h  light.cpp  light.h  (+39 more)
src/physics/: charactercontroller.cpp  charactercontroller.h  collisionobject.cpp  collisionobject.h  debugdraw.cpp  debugdraw.h  havokobject.cpp  havokobject.h  havokshape.cpp  havokshape.h  physicsman.cpp  physicsman.h  rigidbody.cpp  rigidbody.h  shape.cpp  shape.h  shapeman.cpp  shapeman.h  terraincollision.cpp  terraincollision.h
src/platform/: context.h  gamepadconversion.cpp  gamepadconversion.h  gamepadman.cpp  gamepadman.h  glcontext.h  inputman.cpp  inputman.h  keyconversion.cpp  keyconversion.h  keyman.cpp  keyman.h  platform.cpp  platform.h  procaddress.cpp  procaddress.h  vulkancontext.h  window.cpp  window.h
techniques/: ambientconvolution.json  character.json  deferredlight.json  foliagebillboard.json  foliageprt.json  gui.json  light.json  sky.json  standardmaterial.json  terrain.json  terrainmesh.json
test/: lipsum.h  test_awe_binarchive.cpp  test_awe_determinetype.cpp  test_awe_path.cpp  test_awe_rmdlarchive.cpp  test_awe_rmdparchive.cpp  test_common_bitstream.cpp  test_common_boundsphere.cpp  test_common_convexshape.cpp  test_common_crc32.cpp  test_common_endianness.cpp  test_common_frustrum.cpp  test_common_gaussblur.cpp  test_common_inifile.cpp  test_common_memreadstream.cpp  test_common_readfile.cpp  test_common_shape.cpp  test_common_strutil.cpp  test_common_threadpool.cpp  test_common_toml.cpp  test_common_uuid.cpp  test_common_xml.cpp  test_common_zlib.cpp
tools/: CMakeLists.txt  cid2xml.cpp  fsb2wav.cpp  havok2gltf.cpp  packmeta2xml.cpp  streamedresources2xml.cpp  tex2dds.cpp  unbin.cpp  unobj.cpp  unrmdblob.cpp  unrmdl.cpp  unrmdp.cpp
(+100 files in other folders)
